# 2D_Game_Engine

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Logger.cpp  Main.cpp
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.h
tests/: LoggerTest.cpp
